--- a/ProCeFoot/export_presets.cfg
+++ b/ProCeFoot/export_presets.cfg
@@ -7,28 +7,37 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/paul/procecifoot/ProCeciFoot.exe"
-patch_list=PoolStringArray(  )
+export_path="../build/ProCeciFoot.exe"
 script_export_mode=1
 script_encryption_key=""
 
 [preset.0.options]
 
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
-binary_format/64_bits=true
-custom_template/release=""
-custom_template/debug=""
+codesign/enable=false
+codesign/identity_type=0
+codesign/identity=""
+codesign/password=""
+codesign/timestamp=true
+codesign/timestamp_server_url=""
+codesign/digest_algorithm=1
+codesign/description=""
+codesign/custom_options=PoolStringArray(  )
 application/icon="res://icon.ico"
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
-application/file_description=""
-application/copyright=""
+application/company_name="Heficience"
+application/product_name="ProCeciFoot"
+application/file_description="Jeu de Cécifoot"
+application/copyright="GPL GNU V3"
 application/trademarks=""
 
 [preset.1]
@@ -40,21 +49,21 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/paul/procecifoot/ProCeciFoot.x86_64"
-patch_list=PoolStringArray(  )
+export_path="../build/ProCeciFoot.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
 [preset.1.options]
 
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
-binary_format/64_bits=true
-custom_template/release=""
-custom_template/debug=""
 
 [preset.2]
 
@@ -65,24 +74,26 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/paul/procecifoot/ProCeciFootMac.zip"
-patch_list=PoolStringArray(  )
+export_path="../build/ProCeciFootMac.zip"
 script_export_mode=1
 script_encryption_key=""
 
 [preset.2.options]
 
-custom_package/debug=""
-custom_package/release=""
-application/name=""
-application/info="Made with Godot Engine"
+custom_template/debug=""
+custom_template/release=""
+application/name="ProCeciFoot"
+application/info="Jeu de Cecifoot"
 application/icon="res://icon.png"
-application/identifier=""
+application/identifier="com.procecifoot.game"
 application/signature=""
+application/app_category="Games"
 application/short_version="1.0"
 application/version="1.0"
 application/copyright=""
 display/high_res=false
+privacy/camera_usage_description=""
+privacy/microphone_usage_description=""
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
